<resources>
    <string name="app_name">PetShop</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions">These are instructions, blablabla</string>
    <string name="start_text">Go To Store</string>
    <string name="test_description">Impossible Creatures is a 2003 steampunk real-time strategy game developed by Relic Entertainment and published by Microsoft Game Studios. Its unique feature is that the armies used are all created by the player. Inspired by the works of H. G. Wells, the armies consist of 9 creatures; each one is a combination of any two animals from a list of 76 (51 with no downloads). Many animals possess inherent abilities to add more strategic depth to the game. There is an extensive single-player campaign as well as online multiplayer functionality with different game modes, add-ons, custom maps, mods, and scenarios.</string>
</resources>
